@@ -72,10 +72,6 @@ void DockInputCtl::readSettings(QSettings * settings)
     setIgnoreLimits(bool_val);
     emit ignoreLimitsChanged(bool_val);
 
-    bool_val = settings->value("input/hwagc", false).toBool();
-    setAgc(bool_val);
-    emit autoGainChanged(bool_val);
-
     // Ignore antenna selection if there is only one option
     if (ui->antSelector->count() > 1)
     {
@@ -104,6 +100,10 @@ void DockInputCtl::readSettings(QSettings * settings)
             emit gainChanged(gain_name, gain_value);
         }
     }
+
+    bool_val = settings->value("input/hwagc", false).toBool();
+    setAgc(bool_val);
+    emit autoGainChanged(bool_val);
 
     // misc GUI settings
     bool_val = settings->value("gui/fctl_reset_digits", true).toBool();
@@ -408,27 +408,17 @@ void DockInputCtl::setGainStages(gain_list_t &gain_list)
  * Can be used for restoring the manual gains after auto-gain has been
  * disabled.
  */
-void DockInputCtl::restoreManualGains(QSettings *settings)
+void DockInputCtl::restoreManualGains(void)
 {
-    // gains are stored as a QMap<QString, QVariant(int)>
-    // note that we store the integer values, i.e. dB*10
-    QMap <QString, QVariant> allgains;
-    QString gain_name;
-    double gain_value;
-    if (settings->contains("input/gains"))
+    QString gain_stage;
+    double  gain_value;
+    int     i;
+
+    for (i = 0; i < gain_sliders.length(); i++)
     {
-        allgains = settings->value("input/gains").toMap();
-        QMapIterator <QString, QVariant> gain_iter(allgains);
-
-        while (gain_iter.hasNext())
-        {
-            gain_iter.next();
-
-            gain_name = gain_iter.key();
-            gain_value = 0.1 * (double)(gain_iter.value().toInt());
-            setGain(gain_name, gain_value);
-            emit gainChanged(gain_name, gain_value);
-        }
+        gain_stage = gain_sliders.at(i)->property("name").toString();
+        gain_value = 0.1 * (double)gain_sliders.at(i)->value();
+        emit gainChanged(gain_stage, gain_value);
     }
 }
 
